[package]
edition = "2021"
name = "interceptor-rs"
version = "0.1.0"
description = "Interceptor is a lib based on `ptrace` that intercepts and modifies Linux system calls."
license = "MIT"
homepage = "https://github.com/avalon1610/interceptor"
repository = "https://github.com/avalon1610/interceptor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
inter_mem = "0.1.0"
libc = "0.2.140"
once_cell = "1.17.1"
parking_lot = "0.12.1"
paste = "1.0.12"
pete = "0.9.0"
rand = "0.8.5"
syscall_attr = "0.1.0"
tracing = "0.1.37"
