[package]
edition = "2021"
name = "inter_mem"
version = "0.1.0"
description = "part of interceptor"
license = "MIT"
homepage = "https://github.com/avalon1610/interceptor"
repository = "https://github.com/avalon1610/interceptor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
libc = {version = "0.2", default-features = false}

[lib]
crate_type = ["lib", "cdylib"]
