[package]
name = "syscall_attr"
version = "0.1.1"
edition = "2021"
description = "part of interceptor"
license = "MIT"
homepage = "https://github.com/avalon1610/interceptor"
repository = "https://github.com/avalon1610/interceptor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = {version = "1.0.109", features = ["full"]}
